[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/sprites/tetris_game/background.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://resources/sprites/tetris_game/piece.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/tetris_game/grid.png" type="Texture" id=4]
[ext_resource path="res://resources/scenes/ui/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/scenes/ui/GameUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/scenes/ui/Timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/tetris_game/TetrisGame.gd" type="Script" id=8]
[ext_resource path="res://scripts/tetris_game/FallingPiece.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "tetris"
tracks/0/type = "value"
tracks/0/path = NodePath("BoardPiecesContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FallingPiece:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="TetrisGame" type="Node"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Grid" type="Sprite" parent="."]
position = Vector2( 448, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="FallingPiece" type="Sprite" parent="."]
position = Vector2( 358, 180 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
script = ExtResource( 9 )

[node name="BoardPiecesContainer" type="Node2D" parent="."]
position = Vector2( -2, -2 )

[node name="Piece1" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 360, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece2" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 380, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece3" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 400, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece4" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 420, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece5" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 440, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece6" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 460, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece7" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 480, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece8" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 500, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece9" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 520, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Piece10" type="Sprite" parent="BoardPiecesContainer"]
position = Vector2( 540, 422 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="NextPiece" type="Sprite" parent="."]
position = Vector2( 579.969, 311.689 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/tetris = SubResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 558.037
margin_top = 102.476
margin_right = 649.037
margin_bottom = 267.476
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.572549, 0.0235294, 0.258824, 1 )
text = "TOP
1357428
SCORE
1321430

NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" parent="." instance=ExtResource( 7 )]
time = 30
controls_text = "use  a  &  d"

[node name="GameUI" parent="." instance=ExtResource( 6 )]
info_text = "MISS!"

[node name="Transition" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="placed" from="FallingPiece" to="." method="_on_FallingPiece_placed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
